# sphinx-feature-classification

./: .coveragerc  .gitreview  .pre-commit-config.yaml  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/install/: index.rst
doc/source/user/: index.rst
releasenotes/notes/: copy-css-to-static-938b35b03a568abc.yaml  deprecate-version-attribute-23083b6fec709e64.yaml  drop-py2-support-3c3bb1055b271608.yaml  feature.api-e95e2d6304b0e25e.yaml  fix-css-handling-e17f37c98d80b76e.yaml  fix-driver-links-18528dcdbcc9f007.yaml  support-driver-notes-b73d5b185f05db7f.yaml
releasenotes/source/: conf.py  index.rst
sphinx_feature_classification/: __init__.py  support-matrix.css  support_matrix.py
sphinx_feature_classification/releasenotes/notes/: update-summary-table-style-cb5a00eb45cce78a.yaml
sphinx_feature_classification/tests/: base.py  test_sphinx_feature_classification.py
sphinx_feature_classification/tests/fakes/: support-matrix.ini
