[metadata]
name = sphinx-feature-classification
summary = Generate a matrix of pluggable drivers and their support to an API in Sphinx.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    sphinx_feature_classification

[wheel]
universal = 1

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = sphinx_feature_classification/locale
domain = sphinx_feature_classification

[update_catalog]
domain = sphinx_feature_classification
output_dir = sphinx_feature_classification/locale
input_file = sphinx_feature_classification/locale/sphinx_feature_classification.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sphinx_feature_classification/locale/sphinx_feature_classification.pot
