[metadata]
name = sphinx-feature-classification
summary = Generate a matrix of pluggable drivers and their support to an API in Sphinx.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/sphinx-feature-classification/latest/
python-requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    sphinx_feature_classification

[compile_catalog]
directory = sphinx_feature_classification/locale
domain = sphinx_feature_classification

[update_catalog]
domain = sphinx_feature_classification
output_dir = sphinx_feature_classification/locale
input_file = sphinx_feature_classification/locale/sphinx_feature_classification.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sphinx_feature_classification/locale/sphinx_feature_classification.pot
